--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^16.0.1",
     "ws": "^8.6.0"
   },
   "devDependencies": {
